# ProximalInterpolation

./: .gitignore  CMakeLists.txt  ProximalInterpolation.sln  ProximalInterpolation.vcxproj  README.md  config.cpp  config.h  config.json  debug.h  helper_funcs.h  io.h  kdtree.h  main.cpp  perf_prof.h  point.h  point_generator.py  tests.h  tools.h  type_cast.h  utils.h
doc/: task.docx
